Restructure notebook files, split get SBML model info from test run SBML model

--- a/notebooks/validate_antimony_model.ipynb
+++ b/notebooks/validate_antimony_model.ipynb
@@ -8,14 +8,13 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "import csv\n",
     "\n",
     "import tellurium as te\n",
     "import libsbml as ls\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
-    "fn_ant = '../model/euromix.ant'\n"
+    "fn_ant = '../model/euromix.ant'"
    ]
   },
   {
@@ -72,7 +71,7 @@
     "        if vol == 0:\n",
     "            continue\n",
     "        df[name] = df[name]*vol\n",
-    "    df['QTotal'] = df.drop(columns='time').sum(axis=1)            \n",
+    "    df['QTotal'] = df.drop(columns='time').sum(axis=1)\n",
     "    return df"
    ]
   },
@@ -206,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
