Remove redundant volume parameters

--- a/notebooks/validate_antimony_model.ipynb
+++ b/notebooks/validate_antimony_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "729e13bb-8a2c-4712-8228-cefc03db6ea4",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "819e7e22-8ae5-42fd-b975-2e6693d8b552",
    "metadata": {},
    "outputs": [],
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "e5091f6f-8581-4820-a23d-6fd9b80be6dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_vol_map(fn):\n",
-    "    \"\"\"Get volume of the matching compartment for every species\"\"\"\n",
-    "    # load ant model and save as sbml    \n",
+    "    \"\"\"Get volume of the matching compartment for every species.\"\"\"\n",
+    "    # load ant model and save as sbml\n",
     "    r = te.loada(fn)\n",
     "    r.exportToSBML(fn.replace('.ant','.sbml'))\n",
     "    # Load SBML\n",
@@ -59,11 +59,7 @@
     "    return {s.id : model.getCompartment(s.compartment).size for s in model.getListOfSpecies()}\n",
     "\n",
     "def get_amounts_as_df(results):\n",
-    "    \"\"\"Process results from roadrunner to get ammounts.\n",
-    "\n",
-    "    Roadrunner returns the concentration of each species, also for substanceOnlySpecies. \n",
-    "    This function \n",
-    "    \"\"\"\n",
+    "    \"\"\"Process results from roadrunner to get ammounts.\"\"\"\n",
     "    names = [re.sub(r'\\[(.*?)\\]', r'\\1', name) for name in results.colnames]\n",
     "    df = pd.DataFrame(results, columns=names).fillna(0)\n",
     "    for name, vol in get_vol_map(fn_ant).items():\n",
@@ -76,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "e33d7ab4-c24f-4d63-b34a-5c73b5c7880f",
    "metadata": {},
    "outputs": [],
@@ -86,7 +82,7 @@
     "    long_df = pd.melt(df, id_vars=['time'], value_vars=df.columns[1:], var_name='quantity', value_name='value')\n",
     "    long_df['src'] = 'sbml'\n",
     "    long_r = get_r_results(fn_r)\n",
-    "    all_df = pd.concat((long_df, long_r))    \n",
+    "    all_df = pd.concat((long_df, long_r))\n",
     "    g = sns.FacetGrid(all_df, col='quantity', hue='src', col_wrap=5, sharey=False,\n",
     "                     col_order=list(q_cols.values())+['QTotal'])\n",
     "    g.map(sns.lineplot, 'time', 'value')\n",
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "35e2399a-dbce-436b-87da-7a7ee81e0b3f",
    "metadata": {},
    "outputs": [
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "4eb9056f-33f0-4e87-84d5-04e9b2bca33a",
    "metadata": {},
    "outputs": [
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "aea84091-dbb4-404e-a708-7e10a5d7bad2",
    "metadata": {},
    "outputs": [],
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "c99822b3-61fc-42c0-82f7-0436d0d22884",
    "metadata": {},
    "outputs": [],
@@ -219,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "f92b2645-14bb-4509-a9c9-85e259768f23",
    "metadata": {},
    "outputs": [
@@ -229,7 +225,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "0dc021a5-9bbd-4e4e-b4af-74ab1995b302",
    "metadata": {},
    "outputs": [
