Create separate compartments for Air (in the lungs) and Urine

--- a/notebooks/run_sbml_model.ipynb
+++ b/notebooks/run_sbml_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "sbml_file = '../model/euromix.sbml'\n",
     "\n",
     "# Specify the input\n",
-    "input_compartment = 'QGut'"
+    "oral_input = 'QGut'"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +69,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single bolus\n",
+    "### Single oral bolus\n",
     "\n",
     "Single oral dose of 1 at $t_0$ fed as initial amount of the input compartment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -95,9 +95,9 @@
     "rr_model = rr.RoadRunner(sbml_file)\n",
     "\n",
     "# Set initial amout\n",
-    "rr_model.setInitAmount(input_compartment, 1)\n",
-    "rr_model.setConstant(input_compartment, False)\n",
-    "rr_model.setBoundary(input_compartment, False)\n",
+    "rr_model.setInitAmount(oral_input, 1)\n",
+    "rr_model.setConstant(oral_input, False)\n",
+    "rr_model.setBoundary(oral_input, False)\n",
     "\n",
     "# Simulate the PBPK model\n",
     "rr_model.resetAll()\n",
@@ -111,14 +111,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Continuous dose\n",
+    "### Continuous oral dose\n",
     "\n",
     "Continuous dose of 1 set as initial amount, accomplished by setting the input compartment to boundary and constant."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,9 +137,9 @@
     "rr_model = rr.RoadRunner(sbml_file)\n",
     "\n",
     "# Set initial amout set constant and boundary for Gut\n",
-    "rr_model.setInitAmount(input_compartment, 1)\n",
-    "rr_model.setConstant(input_compartment, True)\n",
-    "rr_model.setBoundary(input_compartment, True)\n",
+    "rr_model.setInitAmount(oral_input, 1)\n",
+    "rr_model.setConstant(oral_input, True)\n",
+    "rr_model.setBoundary(oral_input, True)\n",
     "\n",
     "# Simulate the PBPK model\n",
     "rr_model.resetAll()\n",
@@ -153,14 +153,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run with bolus events\n",
+    "### Multiple oral dosing events\n",
     "\n",
     "Bolus inputs fed to the model via events (one per day)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -179,9 +179,9 @@
     "rr_model = rr.RoadRunner(sbml_file)\n",
     "\n",
     "# Make sure A_gut is not constant and does not have boundary conditions\n",
-    "rr_model.setInitAmount(input_compartment, 0)\n",
-    "rr_model.setConstant(input_compartment, False)\n",
-    "rr_model.setBoundary(input_compartment, False)\n",
+    "rr_model.setInitAmount(oral_input, 0)\n",
+    "rr_model.setConstant(oral_input, False)\n",
+    "rr_model.setBoundary(oral_input, False)\n",
     "\n",
     "# Remove all events\n",
     "for event_id in rr_model.model.getEventIds():\n",
@@ -201,7 +201,7 @@
     "    dose_event = time_dose_list[i]\n",
     "    eid = f\"oral_dose_event_{i}\"\n",
     "    rr_model.addEvent(eid, False, f\"time > {dose_event[0]}\", False)\n",
-    "    rr_model.addEventAssignment(eid, input_compartment, f\"{input_compartment} + {dose_event[1]}\", False)\n",
+    "    rr_model.addEventAssignment(eid, input_species, f\"{input_species} + {dose_event[1]}\", False)\n",
     "rr_model.regenerateModel(True, True)\n",
     "\n",
     "# Simulate the PBPK model\n",
@@ -215,14 +215,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run with continuous input events\n",
+    "### Multiple continuous oral input events\n",
     "\n",
     "Continuous input events during 8 hours of the day over multiple days. Accomplished by setting the boundary condition to true."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -241,9 +241,9 @@
     "rr_model = rr.RoadRunner(sbml_file)\n",
     "\n",
     "# Make sure A_gut is not constant and does not have boundary conditions\n",
-    "rr_model.setInitAmount(input_compartment, 0)\n",
-    "rr_model.setConstant(input_compartment, False)\n",
-    "rr_model.setBoundary(input_compartment, True)\n",
+    "rr_model.setInitAmount(oral_input, 0)\n",
+    "rr_model.setConstant(oral_input, False)\n",
+    "rr_model.setBoundary(oral_input, True)\n",
     "\n",
     "# Remove all events\n",
     "for event_id in rr_model.model.getEventIds():\n",
@@ -263,10 +263,10 @@
     "    dose_event = time_dose_duration_list[i]\n",
     "    eid = f\"oral_dose_event_{i}_start\"\n",
     "    rr_model.addEvent(eid, False, f\"time > {dose_event[0]}\", False)\n",
-    "    rr_model.addEventAssignment(eid, input_compartment, f\"{input_compartment} + {dose_event[1]}\", False)\n",
+    "    rr_model.addEventAssignment(eid, input_species, f\"{input_species} + {dose_event[1]}\", False)\n",
     "    eid = f\"oral_dose_event_{i}_stop\"\n",
     "    rr_model.addEvent(eid, False, f\"time > {dose_event[0]} + {dose_event[2]}\", False)\n",
-    "    rr_model.addEventAssignment(eid, input_compartment, f\"{input_compartment} - {dose_event[1]}\", False)\n",
+    "    rr_model.addEventAssignment(eid, input_species, f\"{input_species} - {dose_event[1]}\", False)\n",
     "rr_model.regenerateModel(True, True)\n",
     "\n",
     "# Simulate the PBPK model\n",
@@ -274,6 +274,47 @@
     "\n",
     "# Plot the results\n",
     "plotSimulationResults(results, rr_model.timeCourseSelections)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get compartment volumes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Air - 1.0\n",
+      "Urine - 1.0\n",
+      "Fat - 14.629999999999999\n",
+      "Rich - 7.35\n",
+      "Liver - 1.68\n",
+      "Art - 1.586666666666667\n",
+      "Ven - 3.173333333333334\n",
+      "Skin_e - 0.2318\n",
+      "Skin_u - 2.0862000000000003\n",
+      "Skin_sc_e - 0.0019\n",
+      "Skin_sc_u - 0.0171\n",
+      "Poor - 32.24300000000001\n",
+      "Gut - 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import libsbml as ls\n",
+    "document = ls.readSBML(sbml_file)\n",
+    "model = document.getModel()\n",
+    "for i in range(0,model.getNumCompartments()):\n",
+    "    c = model.getCompartment(i)\n",
+    "    print(f'{c.getId()} - {rr_model[c.getId()]}')"
    ]
   }
  ],
