Update notebook for running the model

--- a/notebooks/run_sbml_model.ipynb
+++ b/notebooks/run_sbml_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,71 +107,71 @@
      "output_type": "stream",
      "text": [
       "Number of parameters: 42\n",
-      "╒═════════════╤════════════╤════════╤════════╕\n",
-      "│ Id          │      Value │ Unit   │ Name   │\n",
-      "╞═════════════╪════════════╪════════╪════════╡\n",
-      "│ BM          │   70       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ BSA         │  190       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Height_sc   │    0.0001  │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Height_vs   │    0.0122  │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scVFat      │    0.209   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scVRich     │    0.105   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scVLiver    │    0.024   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scVBlood    │    0.068   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scFBlood    │    4.8     │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scFFat      │    0.046   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scFPoor     │    0.134   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scFLiver    │    0.259   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ scFSkin     │    0.054   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Falv        │ 2220       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ rho         │    1       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCFat       │   31.11    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCLiver     │    4.95    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCRich      │    1.92    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCPoor      │    3.03    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCSkin_sc   │    0.1     │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCSkin      │    3.71    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ PCAir       │    1e+99   │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Km          │    0.00484 │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Michaelis   │    1       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Vmax        │    0.26    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ fub         │    0.11    │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ fSA_exposed │    0.1     │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Kp_sc_vs    │    0.1     │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ kGut        │    1.3     │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ CLH         │    0       │        │        │\n",
-      "├─────────────┼────────────┼────────┼────────┤\n",
-      "│ Ke          │    7.5     │        │        │\n",
-      "╘═════════════╧════════════╧════════╧════════╛\n"
+      "╒═════════════╤════════════╤═══════════════════╤════════════════════════════════════════════════════════════════════════════╕\n",
+      "│ Id          │      Value │ Unit              │ Name                                                                       │\n",
+      "╞═════════════╪════════════╪═══════════════════╪════════════════════════════════════════════════════════════════════════════╡\n",
+      "│ BM          │   70       │ KiloGM            │ body mass                                                                  │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ BSA         │  190       │ DeciM2            │ body surface area                                                          │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Height_sc   │    0.0001  │ DeciM             │ thickness stratum corneum                                                  │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Height_vs   │    0.0122  │ DeciM             │ thickness viable epidermis                                                 │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scVFat      │    0.209   │ UNITLESS          │ fat as fraction of total body volume                                       │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scVRich     │    0.105   │ UNITLESS          │ richly perfused tissues as fraction of total body volume                   │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scVLiver    │    0.024   │ UNITLESS          │ liver as fraction of total body volume                                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scVBlood    │    0.068   │ UNITLESS          │ blood as fraction of total body volume                                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scFBlood    │    4.8     │ L_PER_KiloGM_HR   │ total blood flow per unit mass                                             │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scFFat      │    0.046   │ UNITLESS          │ fat fraction of total blood flow going to compartments                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scFPoor     │    0.134   │ UNITLESS          │ poorly perfused tissues fraction of total blood flow going to compartments │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scFLiver    │    0.259   │ UNITLESS          │ liver fraction of total blood flow going to compartments                   │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ scFSkin     │    0.054   │ UNITLESS          │ skin fraction of total blood flow going to compartments                    │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Falv        │ 2220       │ L_PER_HR          │ alveolar ventilation rate                                                  │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ rho         │    1       │ KiloGM_PER_L      │ tissue density                                                             │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCFat       │   31.11    │ UNITLESS          │ partition coefficient fat over blood                                       │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCLiver     │    4.95    │ UNITLESS          │ partition coefficient liver over blood                                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCRich      │    1.92    │ UNITLESS          │ partition coefficient poorly perfused tissue over blood                    │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCPoor      │    3.03    │ UNITLESS          │ partition coefficient richly perfused tissue over blood                    │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCSkin_sc   │    0.1     │ UNITLESS          │ partition coefficient viable skin over stratum corneum                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCSkin      │    3.71    │ UNITLESS          │ partition coefficient viable skin over blood                               │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ PCAir       │    1e+99   │ UNITLESS          │ partition coefficient blood over air                                       │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Km          │    0.00484 │ MilliMOL          │ Michaelis constant                                                         │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Michaelis   │    1       │ UNITLESS          │ flag for Michaelis-Menten or linear metabolism                             │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Vmax        │    0.26    │ MilliMOL_PER_L_HR │ maximum rate of metabolism                                                 │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ fub         │    0.11    │ UNITLESS          │ unbound fraction in blood                                                  │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ fSA_exposed │    0.1     │ UNITLESS          │ fraction of skin surface area actually exposed                             │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Kp_sc_vs    │    0.1     │ DeciM_PER_HR      │ diffusion rate from stratum corneum to viable skin                         │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ kGut        │    1.3     │ PER_H             │ oral absorption rate constant                                              │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ CLH         │    0       │ L_PER_HR          │ hepatic clearance rate                                                     │\n",
+      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ Ke          │    7.5     │ L_PER_HR          │ renal excretion rate                                                       │\n",
+      "╘═════════════╧════════════╧═══════════════════╧════════════════════════════════════════════════════════════════════════════╛\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
