Move and update R validation

--- a/notebooks/validate_antimony_model.ipynb
+++ b/notebooks/validate_antimony_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "729e13bb-8a2c-4712-8228-cefc03db6ea4",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "819e7e22-8ae5-42fd-b975-2e6693d8b552",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "                          '11':'QGut', '12':'QExcret', '13':'QMetab'}\n",
     "\n",
     "def get_r_results(fn):\n",
-    "    r_out = pd.read_csv(f'../results/{fn}').drop(columns=['Unnamed: 0'])\n",
+    "    r_out = pd.read_csv(f'../validation/R/results/{fn}').drop(columns=['Unnamed: 0'])\n",
     "    r_out.rename(columns=q_cols, inplace=True)    \n",
     "    r_out['QTotal'] = r_out.drop(columns=['time', 'CTotal']).sum(axis=1)    \n",
     "    long_r = pd.melt(r_out[['time']+list(q_cols.values())+['QTotal']], id_vars=['time'], \n",
@@ -41,16 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "e5091f6f-8581-4820-a23d-6fd9b80be6dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_vol_map(fn, rr_model):\n",
     "    \"\"\"Get volume of the matching compartment for every species.\"\"\"\n",
-    "    # load ant model and save as SBML\n",
-    "    r = te.loada(fn)\n",
-    "    r.exportToSBML(fn.replace('.ant','.sbml'))\n",
     "    # Load SBML\n",
     "    document = ls.readSBML(fn.replace('.ant','.sbml'))\n",
     "    model = document.getModel()\n",
@@ -71,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "e33d7ab4-c24f-4d63-b34a-5c73b5c7880f",
    "metadata": {},
    "outputs": [],
@@ -99,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "35e2399a-dbce-436b-87da-7a7ee81e0b3f",
    "metadata": {},
    "outputs": [
@@ -139,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "0dc021a5-9bbd-4e4e-b4af-74ab1995b302",
    "metadata": {},
    "outputs": [
