--- a/notebooks/run_sbml_model.ipynb
+++ b/notebooks/run_sbml_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -438,36 +438,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Air - 1.0\n",
-      "Urine - 1.0\n",
-      "Fat - 14.629999999999999\n",
-      "Rich - 7.35\n",
-      "Liver - 1.68\n",
-      "Art - 1.586666666666667\n",
-      "Ven - 3.173333333333334\n",
-      "Skin_e - 0.2318\n",
-      "Skin_u - 2.0862000000000003\n",
-      "Skin_sc_e - 0.0019\n",
-      "Skin_sc_u - 0.0171\n",
-      "Poor - 32.24300000000001\n",
-      "Gut - 1.0\n"
+      "Air: 1.0\n",
+      "Urine: 1.0\n",
+      "Fat: 14.629999999999999\n",
+      "Rich: 7.35\n",
+      "Liver: 1.68\n",
+      "Art: 1.586666666666667\n",
+      "Ven: 3.173333333333334\n",
+      "Skin_e: 0.2318\n",
+      "Skin_u: 2.0862000000000003\n",
+      "Skin_sc_e: 0.0019\n",
+      "Skin_sc_u: 0.0171\n",
+      "Poor: 32.24300000000001\n",
+      "Gut: 1.0\n"
      ]
     }
    ],
    "source": [
-    "import libsbml as ls\n",
+    "# Load model\n",
     "document = ls.readSBML(sbml_file)\n",
     "model = document.getModel()\n",
+    "\n",
+    "# Load parametrisation\n",
+    "loadParametrisation(rr_model, param_file, param_instance_id)\n",
+    "\n",
+    "# Print compartment sizes (volumes)\n",
     "for i in range(0,model.getNumCompartments()):\n",
     "    c = model.getCompartment(i)\n",
-    "    print(f'{c.getId()} - {rr_model[c.getId()]}')"
+    "    print(f'{c.getId()}: {rr_model[c.getId()]}')"
    ]
   }
  ],
