--- a/notebooks/validate_antimony_model.ipynb
+++ b/notebooks/validate_antimony_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "729e13bb-8a2c-4712-8228-cefc03db6ea4",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "819e7e22-8ae5-42fd-b975-2e6693d8b552",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "                          '11':'QGut', '12':'QExcret', '13':'QMetab'}\n",
     "\n",
     "def get_r_results(fn):\n",
-    "    r_out = pd.read_csv(f'../validation/R/results/{fn}').drop(columns=['Unnamed: 0'])\n",
+    "    r_out = pd.read_csv(f'../validation/R/results//{fn}').drop(columns=['Unnamed: 0'])\n",
     "    r_out.rename(columns=q_cols, inplace=True)    \n",
     "    r_out['QTotal'] = r_out.drop(columns=['time', 'CTotal']).sum(axis=1)    \n",
     "    long_r = pd.melt(r_out[['time']+list(q_cols.values())+['QTotal']], id_vars=['time'], \n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "e5091f6f-8581-4820-a23d-6fd9b80be6dc",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e33d7ab4-c24f-4d63-b34a-5c73b5c7880f",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "35e2399a-dbce-436b-87da-7a7ee81e0b3f",
    "metadata": {},
    "outputs": [
@@ -112,10 +112,15 @@
     }
    ],
    "source": [
-    "rr_model = te.loada(fn_ant) # Load model with fSA_exposed = 0.1\n",
+    "# Load model with fSA_exposed = 0.1\n",
+    "rr_model = te.loada(fn_ant)\n",
     "rr_model.fSA_exposed = 1\n",
     "rr_model.QGut = 1\n",
-    "compare(rr_model.simulate(0, 24, 500), rr_model, fn_r='euromix_r_results_MA.csv')"
+    "compare(\n",
+    "    rr_model.simulate(0, 24, 500),\n",
+    "    rr_model,\n",
+    "    fn_r='euromix_r_results_MA.csv'\n",
+    ")"
    ]
   },
   {
@@ -136,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "0dc021a5-9bbd-4e4e-b4af-74ab1995b302",
    "metadata": {},
    "outputs": [
